<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Table layout for information
    Name:
    Initial Price:
    Current Price:
    Percentage Change:-->

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:layout_gravity="center"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/tablerow_padding"
                android:text="@string/item_name"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/name_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:layout_weight="1"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/tablerow_padding"
                android:text="@string/url"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/url_view"
                android:linksClickable="true"
                android:autoLink="web"
                android:textSize="@dimen/text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:maxLines="100"
                android:scrollHorizontally="false"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/tablerow_padding"
                android:text="@string/initial_price"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/initialPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="@dimen/text_size"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/tablerow_padding"
                android:text="@string/current_price"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/currentPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:textSize="@dimen/text_size"/>
        </TableRow>



        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/tablerow_padding"
                android:text="@string/percentage_change"
                android:textSize="@dimen/text_size"/>

            <TextView
                android:id="@+id/percentChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/text_size"/>
        </TableRow>

    </TableLayout>





</LinearLayout>